--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.0",
     "axios": "^1.5.0",
     "pinia": "^2.1.0",
-    "vue-router": "^4.2.0"
+    "vue": "^3.3.0",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-vue": "^4.0.0"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
